--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -79,7 +79,11 @@ required = ["github.com/GeertJohan/go.rice", "golang.org/x/tools/cmd/stringer", 
   name = "github.com/sirupsen/logrus"
   version = "=v1.3.0"
 
-[[override]]
+[[constraint]]
+  name = "github.com/davecgh/go-spew"
+  version = "=v1.1.0"
+
+[[constraint]]
   name = "github.com/nanobox-io/golang-scribble"
   revision = "aa3e7c118975babb5ab3bc2a221b9d5a420b625b"
 
@@ -99,9 +103,27 @@ required = ["github.com/GeertJohan/go.rice", "golang.org/x/tools/cmd/stringer", 
   name = "google.golang.org/grpc"
   version = "=v1.15.0"
 
+#[[constraint]]
+#  name = "github.com/clipperhouse/gen"
+#  version = "4.3"
+
 [[constraint]]
   name = "github.com/dlespiau/covertool"
-  revision = "b0c4c6d0583aae4e3b5d12b6ec47767670548cc4"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/lennon-guan/pipe"
+  branch = "master"
+
+[[override]]
+  name = "github.com/vmware/go-vcloud-director"
+  # version = "2.0.0"
+  branch = "master"
+  source = "github.com/oscarpicas/go-vcloud-director.git"
+
+[[constraint]]
+  name = "github.com/go-playground/validator"
+  version = "v9.27.0"
 
 [[constraint]]
   name = "github.com/graymeta/stow"
